[project]
name = "foxypack-youtube-pytubefix"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "shapranov.work@gmail.com"},
]
dependencies = ["foxypack>=0.0.1", "pytubefix>=9.5.1", "regex>=2025.9.18", "beautifulsoup4>=4.14.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
