[project]
name = "foxypack-youtube-pytubefix"
version = "0.0.1"
description = "YouTube Support Library for foxypack"
authors = [
    {name = "", email = "shapranov.work@gmail.com"},
]
dependencies = ["foxypack>=0.0.4", "pytubefix>=9.5.1", "regex>=2025.9.18", "beautifulsoup4>=4.14.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/ShapDi/foxypack-youtube-pytubefix"

[project.optional-dependencies]
dev = [
    "ruff>=0.13.3",
]
[tool.pdm]
distribution = true
